@@ -20,6 +20,7 @@ except ImportError: # pragma: no cover
 from repoze.bfg.interfaces import IResponseFactory
 from repoze.bfg.interfaces import ITemplateRenderer
 
+from repoze.bfg.decorator import reify
 from repoze.bfg.renderers import template_renderer_factory
 from repoze.bfg.settings import get_settings
 from repoze.bfg.threadlocal import get_current_registry
@@ -40,9 +41,13 @@ def renderer_factory(path):
 class TextTemplateRenderer(object):
     implements(ITemplateRenderer)
     def __init__(self, path):
+        self.path = path
+
+    @reify
+    def template(self):
         settings = get_settings()
         auto_reload = settings and settings['reload_templates']
-        self.template = TextTemplateFile(path, auto_reload=auto_reload)
+        return TextTemplateFile(self.path, auto_reload=auto_reload)
 
     def implementation(self):
         return self.template
